--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ The aim of this workshop is to bring together mathematicians and physicists work
 	
 <br>	
 		
-		<h1>Sponsors</h1>
+		<h1>Support</h1>
 		<table>
 			<tbody>
 				<tr>
