--- a/program.html
+++ b/program.html
@@ -346,7 +346,7 @@ The experimental observation of flavor-symmetry broken phases and superconductiv
                 </div>
             </li>
 
-            <li> <strong> 10:45-11:15am: Coffee break </strong> 
+            <li> <strong> 3:45-4:15pm: Coffee break </strong> 
                 <br>
             </li>
 
